--- a/UIScreenPractice/Info.plist
+++ b/UIScreenPractice/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>FontsFree-Net-SFProText-RegularItalic.ttf</string>
+		<string>Poppins-Bold.ttf</string>
+		<string>SFProDisplayRegular.OTF</string>
+		<string>SFProDisplayMedium.OTF</string>
+		<string>SFBoldItalic.OTF</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
